src/css/main.css
.modal {
    z-index: 10;
    position: absolute;
    height: 100%;
    width: 100%;
    background-color: rgba(0,0,0,0.4);
}

.modalContents {
    background-color: #23272a;
    position: fixed;
    padding: 20px;
    border: 1px solid #888;
    width: 60%;
    height: 80%;
    top: 10%;
    left: 20%;
    transform: translate(-50%, -50%);
    display: flex;
    flex-direction: row;
    transition: transform 3s;
    transform: scale(.5);
}

.modalContentsActive {
    background-color: #23272a;
    position: fixed;
    padding: 20px;
    border: 1px solid #888;
    width: 60%;
    height: 80%;
    top: 10%;
    left: 20%;
    transform: translate(-50%, -50%);
    display: flex;
    flex-direction: row;
    transition: transform 3s;
    transform: scale(1);
}

.activeText {
    width: 80%;
}

.current {
    width: 100%;
    height: 100%;
    resize: none;
    background-color: #2c2f33;
    border: 1px solid #2c2f33;
    color: #ffffff;
}

.tabBar {
    width: 20%;
    display: flex;
    flex-direction: column;
    overflow: auto;
}

.tab {
    background-color: #23272a;
    color: #ffffff;
    border: 0px solid;
    width: 98%;
    position: relative;
    height: 25px;
    min-height: 25px;
    text-align: center;
    font-family: system-ui, sans-serif;
    border-radius: 10px;
}

.selectedTab {
    background-color: #2c2f33;
    color: #ffffff;
    border: 0px solid;
    width: 98%;
    position: relative;
    height: 25px;
    min-height: 25px;
    text-align: center;
    font-family: system-ui, sans-serif;
    border-radius: 10px;
}

.remove {
    top: 0%;
    left: 95%;
    position: absolute;
    margin: 0;
    padding: 0;
}

.addBtn {
    width: 98%;
    min-height: 25px;
    height: 25px;
    top: 0%;
    left: 0%;
    background-color: #23272a;
    color: #ffffff;
    border: 0px solid;
    border-radius: 10px;
    font-family: system-ui, sans-serif;
    font-size: 17px;
}

.addBtn:active{
    background-color: #2c2f33;
}

.addBtn:focus {
    outline: none;
}

